--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Hello World</title>
+    <meta charset="UTF-8" />
+    <title>Loda</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <!--css-->
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
+
+    <!--js-->
+    <script th:src="@{/js/bootstrap.js}"></script>
+
 </head>
 <body>
+<h1 th:utext="#{demo.hello}"></h1>
+<h2>Loda Profile</h2>
 
-<h1>Loda</h1>
-
-<a href="https://fb.com">Website</a>
-<a href="https://github.com/loda-kun/spring-boot-learning">Github</a>
+<ul>
+    <!--Duyệt qua toàn bộ phần tử trong biến "lodaProfile"-->
+    <li th:each="info : ${profile}">
+        <!--Với mỗi phần tử, lấy ra key và value-->
+        <span th:text="*{info.key}"></span> : <span th:text="*{info.value}"></span>
+    </li>
+</ul>
 
 </body>
+
 </html>
